2008-03-04  Dominic Lachowicz <domlachowicz@gmail.com>

	* rsvg-image.c: rsvg-convert crashed with SIGSEGV in _rsvg_acquire_xlink_href_resource()
	(#520261)
	
2008-02-24  Dominic Lachowicz <domlachowicz@gmail.com>

	* rsvg-text.c:
	* rsvg-styles.h:
	* rsvg-styles.c: Handle xml:space="prserve" (#353609)
	
2008-02-24  Dominic Lachowicz <domlachowicz@gmail.com>	

	* rsvg-path.c (rsvg_parse_path_do_cmd): If a moveto is followed by 
	multiple pairs of coordinates, the subsequent pairs are treated as 
	implicit lineto commands. (#482787)

	* rsvg-structure.c (rsvg_node_draw): Handle display:none (#486377)

	* test-display: Make window size larger (#445870)
	
2008-02-20  Dominic Lachowicz <domlachowicz@gmail.com>

	* Fixes last bug @ below url. Text inside of text and tspan nodes
	now gets coalesced, so that we can pass it all to a single PangoLayout.
	This fixes some rendering bugs.
	
2008-02-20  Dominic Lachowicz <domlachowicz@gmail.com>

	From Behdad Esfahbod <behdad@behdad.org>

	* Fixes bugs described in the following thread: 
	http://lists.cairographics.org/archives/cairo/2008-February/013082.html

2008-02-03  Christian Persch  <chpe@gnome.org>

	* rsvg-gobject.c: (rsvg_ctx_free_helper): Fix mismatched allocators.
	Bug #514071.

2008-02-02  Dominic Lachowicz <domlachowicz@gmail.com>

	* test-display.c: Get rid of gnome print. Use gtk-print instead (#508526)
	
2008-02-02  Dominic Lachowicz <domlachowicz@gmail.com>

	* configure.in: Bump version #; automake warning about required AM_PROG_CC_C_O (#513858)
	
2008-02-02  Jan Arne Petersen <jpetersen@jpetersen.org>

	* Migrate to gio (#513778)
	
2008-01-29  Christian Persch  <chpe@gnome.org>

	* test-display.c: (view_pixbuf): Add the filename to the window title.
	Bug #512797.

2008-01-20  Dominic Lachowicz <domlachowicz@gmail.com>

	* configure.in: Bump version #to 2.20.0
	
2008-01-19  Bertram Felgenhauer <bertram.felgenhauer@googlemail.com>
